Crash making linked objects local and undo #37599

Closed
opened 2013-11-24 15:01:58 +01:00 by richie967 · 18 comments
richie967 commented 2013-11-24 15:01:58 +01:00 (Migrated from localhost:3001)

System Information
Dell Studio 1749, i3, Windows 7, 1 GB ATI Mobility Radeon HD 5650

Blender Version
Broken: Blender 2.69.0 r60995

Steps to Redo
when importing the attached blender file objects into a new blender file, using file > link, linking just the objects, then make all objects local, then move up, move down, then as soon as i click 'ctrl & z' the blender crashes,

Any ideas?

undo steps set to 32

coffee-table3.blend

**System Information** Dell Studio 1749, i3, Windows 7, 1 GB ATI Mobility Radeon HD 5650 **Blender Version** Broken: Blender 2.69.0 r60995 **Steps to Redo** when importing the attached blender file objects into a new blender file, using file > link, linking just the objects, then make all objects local, then move up, move down, then as soon as i click 'ctrl & z' the blender crashes, Any ideas? undo steps set to 32 [coffee-table3.blend](https://archive.blender.org/developer/F32136/coffee-table3.blend)
Author

#39354 was marked as duplicate of this issue

#39354 was marked as duplicate of this issue
richie967 commented 2013-11-24 15:01:59 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
richie967 commented 2013-11-24 15:01:59 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @richie967

Added subscriber: @richie967

Added subscriber: @brecht

Added subscriber: @brecht

Please add all the requested information about system information, blender version, steps to redo, etc, not just a title.

Please add all the requested information about system information, blender version, steps to redo, etc, not just a title.
richie967 commented 2013-11-24 15:24:38 +01:00 (Migrated from localhost:3001)
Author

Hi brecht,

here is some more information....

System Information
Dell Studio 1749, i3, Windows 7, 1 GB ATI Mobility Radeon HD 5650

Blender Version
Broken: Blender 2.69.0 r60995

when importing the attached blender file objects into a new blender file, using file > link, linking just the objects, then make all objects local, then move up, move down, then as soon as i click 'ctrl & z' the blender crashes,

Any ideas?

undo steps set to 32{F32136}

Hi brecht, here is some more information.... System Information Dell Studio 1749, i3, Windows 7, 1 GB ATI Mobility Radeon HD 5650 Blender Version Broken: Blender 2.69.0 r60995 when importing the attached blender file objects into a new blender file, using file > link, linking just the objects, then make all objects local, then move up, move down, then as soon as i click 'ctrl & z' the blender crashes, Any ideas? undo steps set to 32{[F32136](https://archive.blender.org/developer/F32136/coffee-table3.blend)}
Brecht Van Lommel changed title from blender crashes when doing an undo 'ctrl & z'... This happens shortly after linking in an object, making it local ,moving it around, then pressing undo to Crash making linked objects local and undo 2013-11-25 20:29:45 +01:00

I can confirm the crash with the above steps, linking in all objects in this file.

I can confirm the crash with the above steps, linking in all objects in this file.
Sergey Sharybin self-assigned this 2014-02-17 10:11:18 +01:00

@brecht, i couldn't really reproduce the crash. Do have:

Warning: LIB ERROR: object lost from scene: 'Scene'
LIB ERROR: object lost from scene: 'Scene'

messages in the console after the undo tho. Will have a look into this issue, but wouldn't mind having some details about crash..

@brecht, i couldn't really reproduce the crash. Do have: ``` Warning: LIB ERROR: object lost from scene: 'Scene' LIB ERROR: object lost from scene: 'Scene' ``` messages in the console after the undo tho. Will have a look into this issue, but wouldn't mind having some details about crash..
thread #25: tid = 0x14d564, 0x0000000100aeb4d1 blender`BKE_curve_bevel_make(scene=0x0000000106501008, ob=0x00000001065e1c08, disp=0x0000000115f4bcb8, forRender=0, renderResolution=0) + 161 at curve.c:1641, stop reason = EXC_BAD_ACCESS (code=1, address=0x114)
  frame #0: 0x0000000100aeb4d1 blender`BKE_curve_bevel_make(scene=0x0000000106501008, ob=0x00000001065e1c08, disp=0x0000000115f4bcb8, forRender=0, renderResolution=0) + 161 at curve.c:1641
  frame #1: 0x0000000100b0fe08 blender`do_makeDispListCurveTypes(scene=0x0000000106501008, ob=0x00000001065e1c08, dispbase=0x000000010563da88, derivedFinal=0x00000001065e2120, forRender=0, forOrco=0, renderResolution=0) + 552 at displist.c:1396
  frame #2: 0x0000000100b0fbce blender`BKE_displist_make_curveTypes(scene=0x0000000106501008, ob=0x00000001065e1c08, forOrco=0) + 222 at displist.c:1612
  frame #3: 0x0000000100bf1224 blender`BKE_object_handle_update_ex(eval_ctx=0x000000010563f898, scene=0x0000000106501008, ob=0x00000001065e1c08, rbw=0x0000000000000000) + 1508 at object.c:2945
  frame #4: 0x0000000100c4924d blender`scene_update_object_func(pool=0x0000000113ad2128, taskdata=0x0000000113aabc98, threadid=6) + 285 at scene.c:1320
  frame #5: 0x0000000100dcf2b8 blender`task_scheduler_thread_run(thread_p=0x0000000105721098) + 104 at task.c:137
  frame #6: 0x00007fff85424899 libsystem_pthread.dylib`_pthread_body + 138
  frame #7: 0x00007fff8542472a libsystem_pthread.dylib`_pthread_start + 137
  frame #8: 0x00007fff85428fc9 libsystem_pthread.dylib`thread_start + 13

cu->bevobj->data and so bevcu is NULL. It's easy to add a NULL check but that doesn't seem like the right solution.

It should be possible to reproduce this if you follow these steps:

  • New file
  • File > Link, go to Objects, press A to select all, click Link
  • L key to make local > Selected Objects
  • G key to move, enter to confirm.
  • Ctrl + Z to undo
``` thread #25: tid = 0x14d564, 0x0000000100aeb4d1 blender`BKE_curve_bevel_make(scene=0x0000000106501008, ob=0x00000001065e1c08, disp=0x0000000115f4bcb8, forRender=0, renderResolution=0) + 161 at curve.c:1641, stop reason = EXC_BAD_ACCESS (code=1, address=0x114) frame #0: 0x0000000100aeb4d1 blender`BKE_curve_bevel_make(scene=0x0000000106501008, ob=0x00000001065e1c08, disp=0x0000000115f4bcb8, forRender=0, renderResolution=0) + 161 at curve.c:1641 frame #1: 0x0000000100b0fe08 blender`do_makeDispListCurveTypes(scene=0x0000000106501008, ob=0x00000001065e1c08, dispbase=0x000000010563da88, derivedFinal=0x00000001065e2120, forRender=0, forOrco=0, renderResolution=0) + 552 at displist.c:1396 frame #2: 0x0000000100b0fbce blender`BKE_displist_make_curveTypes(scene=0x0000000106501008, ob=0x00000001065e1c08, forOrco=0) + 222 at displist.c:1612 frame #3: 0x0000000100bf1224 blender`BKE_object_handle_update_ex(eval_ctx=0x000000010563f898, scene=0x0000000106501008, ob=0x00000001065e1c08, rbw=0x0000000000000000) + 1508 at object.c:2945 frame #4: 0x0000000100c4924d blender`scene_update_object_func(pool=0x0000000113ad2128, taskdata=0x0000000113aabc98, threadid=6) + 285 at scene.c:1320 frame #5: 0x0000000100dcf2b8 blender`task_scheduler_thread_run(thread_p=0x0000000105721098) + 104 at task.c:137 frame #6: 0x00007fff85424899 libsystem_pthread.dylib`_pthread_body + 138 frame #7: 0x00007fff8542472a libsystem_pthread.dylib`_pthread_start + 137 frame #8: 0x00007fff85428fc9 libsystem_pthread.dylib`thread_start + 13 ``` `cu->bevobj->data` and so `bevcu` is NULL. It's easy to add a NULL check but that doesn't seem like the right solution. It should be possible to reproduce this if you follow these steps: * New file * File > Link, go to Objects, press A to select all, click Link * L key to make local > Selected Objects * G key to move, enter to confirm. * Ctrl + Z to undo

@brecht, managed to reproduce now. Checking for NULL is not the right solution at all, we need to understand why object data is got lost.

@brecht, managed to reproduce now. Checking for NULL is not the right solution at all, we need to understand why object data is got lost.

@brecht, the issue is actually caused by linked curve pointing to a local object which screws up the file loading. As far as i can tell it's not really supported situation so guess proper solution would be to disallow making IDs local if they're used by other datablocks?

@brecht, the issue is actually caused by linked curve pointing to a local object which screws up the file loading. As far as i can tell it's not really supported situation so guess proper solution would be to disallow making IDs local if they're used by other datablocks?

Right, either that or making the other datablocks local automatically, but to me it seems better to refuse and let the user then use Selected Objects & Data. So yes, I think we should disallow it.

Right, either that or making the other datablocks local automatically, but to me it seems better to refuse and let the user then use Selected Objects & Data. So yes, I think we should disallow it.

Added subscriber: @koilz

Added subscriber: @koilz

◀ Merged tasks: #39354.

◀ Merged tasks: #39354.
Author

This issue was referenced by blender/blender-addons-contrib@6e5e3b73f3

This issue was referenced by blender/blender-addons-contrib@6e5e3b73f37f952420d87a3d8acd07a7f68dd5a3
Author

This issue was referenced by 6e5e3b73f3

This issue was referenced by 6e5e3b73f37f952420d87a3d8acd07a7f68dd5a3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6e5e3b73f3.

Closed by commit 6e5e3b73f3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37599
No description provided.